--- a/style.css
+++ b/style.css
@@ -118,8 +118,9 @@ body {
 }
 
 .home p {
+  font-family: "Montserrat", sans-serif;
   font-size: 18px;
-  font-family: "Open Sans", sans-serif;
+  /* font-family: "Open Sans", sans-serif; */
   font-weight: 100;
   text-shadow: none;
 }
@@ -148,8 +149,10 @@ body {
   left: 0;
   top: 40%;
   text-decoration: none;
+  cursor: pointer;
 }
 .preview_home .next {
+  cursor: pointer;
   font-family: "Open Sans", sans-serif;
   font-weight: bolder;
   font-size: 50px;
@@ -160,67 +163,24 @@ body {
   text-decoration: none;
 }
 
+.next, .previous {
+  transition: all .3s;
+}
+
+.next:hover, .previous:hover {
+  color: purple;
+  transform: scale(1.2);
+}
+
 .actionFigure {
   position: relative;
   display: flex;
   flex-direction: row;
 }
 
-.actionFigure .preview {
-  width: auto;
-  height: 70vh;
-}
-
-.preview img {
-  animation-name: preview_animate;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-}
-
-.actionFigure .preview.Albedo {
-  display: flex;
-  flex-direction: row;
-  transition: all 1s;
-}
-.actionFigure .preview.Albedo.remove {
-  display: none;
-}
-
-.actionFigure .preview.Asuna {
-  display: none;
-  flex-direction: row;
-  transition: all 1s;
-}
-
-.actionFigure .preview.Megumi {
-  display: none;
-  flex-direction: row;
-  transition: all 1s;
-}
-
-.preview.Albedo:target {
-  display: flex;
-}
-.preview.Albedo:target ~ .preview.Asuna + .preview.Megumi {
-  display: none;
-}
-.preview.Asuna:target {
-  display: flex;
-}
-.preview.Asuna:target ~ .preview.Albedo + .preview.Megumi {
-  display: none;
-}
-.preview.Megumi:target {
-  display: flex;
-}
-.preview.Megumi:target ~ .preview.Albedo + .preview.Asuna {
-  display: none;
-}
-
-.Albedo:hover,
-.Asuna:hover,
-.Megumi:hover {
-  transform: scale(1.1);
+.preview {
+  width: 30vw;
+  height: auto;
 }
 
 .product {
@@ -245,10 +205,11 @@ body {
   display: none;
   flex-direction: column;
   justify-content: space-between;
-  width: 50px;
-  height: 50px;
+  width: 30px;
+  height: 30px;
   right: 50px;
-  top: 1.5vh;
+  /* top: 1.5vh; */
+  margin-top: 6px;
   z-index: 9;
 }
 
@@ -264,7 +225,7 @@ body {
 .menu span {
   display: block;
   width: 100%;
-  height: 10px;
+  height: 5px;
   background-color: white;
   border-radius: 10px;
   transition: 0.8s;
@@ -283,17 +244,6 @@ body {
   transform: rotate(-45deg) scaleX(1.25);
   transform-origin: 0 100%;
   border-radius: 0;
-}
-
-/* ANIMATION */
-@keyframes preview_animate {
-  0%,
-  100% {
-    transform: none;
-  }
-  50% {
-    transform: translateY(5px);
-  }
 }
 
 /* RESPONSIVE */
@@ -348,7 +298,8 @@ body {
   }
 
   .actionFigure .preview {
-    height: 55vh;
+    width: 50vw;
+    height: auto;
   }
 
   .Albedo:hover,
@@ -379,6 +330,7 @@ body {
   }
 
   .actionFigure .preview {
-    height: 45vh;
+    width: 80vw;
+    height: auto;
   }
 }
